Finalizada la cabecera con diseño azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container">
         <div id="header">
-            Cabecera
+            Hyperblog <span id="tagline">Tu blog de confianza</span>
         </div>
         <div id="post">
             <h1>Este es el titulo atractivo e interesante del post</h1>
