--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,7 @@
         <div id="post">
             <h1>Este es el titulo atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+            <p>Los blogs son la mejor forma de comparetir información y tus ideas. Mucho más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres... por ahora.</p>
         </div>
     </div>
 </body>
