Color de fondo, logo nuevo y mejor color de header

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,7 @@
 <body>
     <div id="container">
         <div id="header">
+            <img id="logo" src="images/dragon.png" />
             Hyperblog <span id="tagline">Tu blog de cabecera</span>
         </div>
         <div id="post">
