--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,9 @@
             <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
             <p>Los blogs son la mejor forma de comparetir información y tus ideas. Mucho más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres... por ahora.</p>
             <p>Suscribete y dale like</p>
+	    <div id="footer">
+		Hecho con amor en Waytic
+	    </div>
         </div>
     </div>
 </body>
