--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,7 @@
             Hyperblog <span id="tagline">Tu blog de cabecera</span>
         </div>
         <div id="post">
-            <h1>Este es el titulo atractivo e interesante del post</h1>
+            <h1>Aquí inicia la historia de un gran proyecto</h1>
             <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas &iacute;ncreibles que se pueden hacer con ramas</p>
             <p>Los blogs son la mejor forma de comparetir información y tus ideas. Mucho más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres... por ahora.</p>
             <p>Suscribete y dale like</p>
