Cambio al tagline y color del footer :D

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
     <div id="container">
         <div id="header">
             <img id="logo" src="images/dragon.png" />
-            Hyperblog <span id="tagline">Tu blog de cabecera</span>
+            Hyperblog <span id="tagline">Tu blog de confianza</span>
         </div>
         <div id="post">
             <h1>Aquí inicia la historia de un gran proyecto</h1>
